# strava_swagger2pydantic

./: .pre-commit-config.yaml  LICENSE  README.md  action.yml  changelog.md  pyproject.toml  requirements.txt  swagger2pydantic.py
.github/: dependabot.yml
.github/workflows/: test_action.yml
src/: swagger2pydantic.py
