[project]
name = "strava-swagger2pydantic"
version = "0.1.0"
description = "Converts Stava API swagger to Pydantic model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datamodel-code-generator[http]>=0.33.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
]

[tool.black]
line-length = 79

[tool.ruff]
lint.select = ["F401", "I", "UP"]
line-length = 79
target-version = "py310"

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
